--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+    <title>Jeopardy</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
-    <title>Jeopardy!</title>
   </head>
-  <body>
-<div class="container">
+  <body ng-app='jeopardy'>
+    <ng-view></ng-view>
 
-</div>
-<ngView></ngView>
-
-
-
-<script src="bundle.js"></script>
+    <script src="node_modules/jquery/dist/jquery.js" charset="utf-8"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
+   <script src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
